config(security): 配置CORS跨域支持并更新认证配置
- 添加CORS配置项允许自定义前端域名
- 更新Casdoor认证URL和客户端ID为占位符
- 添加生产环境.env.production到git忽略列表
- 实现动态CORS来源配置支持多个域名
- 配置安全过滤器链中的跨域请求处理